--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,30 @@
-.container{
+body {
+
+  background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+  background-size: contain;
+
+}
+
+.container {
   margin: 2rem;
   display: flex;
+
+
+}
+
+
+.cardContainer {
+  display: flex;
+  justify-content: center;
+  margin: 1rem;
+  flex-wrap: wrap;
+
+
+}
+
+.cardButton {
+  margin-left: 2rem;
   
-}
-
-
-.cardContainer{
-  flex-direction:row;
-
-}
-
-.cardButton{
-  margin-left: 1rem;
 }
 
 
@@ -20,3 +33,67 @@ img {
   max-height: 300px;
 }
 
+.tarjeta__productos {
+  display: flex;
+  background-color: rgba(66, 56, 56, 0.264);
+  color: black;
+  text-align: center;
+  width: 300px;
+  height: 300px;
+  padding: 1rem;
+  margin: 1rem;
+  overflow: hidden;
+  display: inline-block;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: 3rem;
+
+}
+
+.tarjeta__productos__imgen {
+  width: 100%;
+  height: 280px;
+}
+
+.tarjeta__productos__titulo {
+  font-size: 25px;
+  color: rgb(0, 0, 0);
+  margin: 3px;
+}
+
+
+/* Detalle del producto */
+
+.container{
+  width: 100%;
+  margin: 0 auto;
+}
+
+.detail{
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center
+  
+}
+
+.detail__image{
+  width: 1200px;
+  height: 800px;
+
+}
+
+.content p, h1{
+  padding: 1rem;
+  margin: 1rem;
+  margin: 0 auto;
+}
+
+.button__Detail{
+  display: flex;
+  justify-content: center;
+  padding-left: 20%;
+}
